# Testing_Feature_Detection

./: CMakeLists.txt  Testing_Feature_Detection.cpp  Testing_Feature_Detection.h  detection.hpp  isa_detection.hpp  portability.hpp
.github/workflows/: CLANG-MacOS.yml  CLANG-Ubuntu.yml  GCC-Ubuntu.yml  MSVC-Windows.yml
